--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,7 +3,7 @@ $primaryColor: #343a40;
 $blue: #007bff;
 
 // Theme colors
-$themeColor: #28a745;
+$themeColor: #dc3545;
 $themeInfoColor: #00acd6;
 $themeDarkColor: #23272b;
 $themeWhiteColor: #ffffff;
